0.2.0-rc3 - 
=====================

 * Added ATContentTypes Site customization policy
   [tiran]

0.2.0-rc2 - 2004-10-06
======================

 * Fixed problem with isIDAutoGenerated if the object was not wrapped in a site
   [tiran]
 
 * Fixed download tab [tiran]
 
 * Made image/file viewable when invoked directly by adding an index_html
   [tiran]
 
 * Replaced tag method of ATImage [tiran]

 * Fixed migration: Migration failed when there was a broken object in a folder
  [tiran]

 * Fixed property migration: continue if the object already has this attribut
   [tiran]
   
 * Added talkback discussion migration
   [tiran]

 * Set description as primary field for ATEvent. Also use an easier syntax for
   setting description to isMetadata = False.
   [tiran]

 * Renamed tab from history to last changes. Added big warning that the history
   is based on zodb revisions.
   [tiran]
   
 * Added ExtendingType howto (more to follow)
   [tiran]

 * Recoded migration walkers to use a generator instead returning a list to
   make them much more memory efficient.
   [tiran]

 * Rewritten folder migration to use the depth inside the folder structur
   instead of recursing into the full side.
   [tiran]

 * Added a findStaledObjects external method to ATCT to find staled objects. It
   is very useful to clean up a site before running the migration.
   [tiran]

 * Fixed an ugly bug in ATDocument which was screwing up references on copy.
   [tiran]

 * Merged ConstrainTypesMixin from the branch into the HEAD. Thx to Leonardo
   Rochael Almeida and Jens Werner Klein for their work.
   [yenzens, rochael]

 * Fixed [ 1013853 ] File upload image shows mime-type in widget
   [tiran]

 * Removed call to markCreationFlag()
   [tiran]

 * Fixed problem with ATFavorite: Migration to ATFavorite failed when the object
   was gone or the user wasn't allowed to access it.
   [tiran]

 * Fixed [ 1027070 ] Download permission. Now the download tab is shown for all